# Vox

./: .gitignore  Doxyfile  README.md  clang-check.sh
src/: .clang_complete  App.cpp  App.hpp  CMakeLists.txt  GraphicsDefs.hpp  MathUtil.hpp  main.cpp
src/client/: App.cpp  App.hpp  CMakeLists.txt  GraphicsDefs.hpp  todo.txt
src/client/engine/: CMakeLists.txt  Chunk.hpp  InternalMessage.hpp  NetworkChunkProvider.cpp  NetworkChunkProvider.hpp  NetworkListner.cpp  NetworkListner.hpp  World.hpp  WorldGenerator.hpp
src/client/engine/entity/: Entity.hpp  PlayerEntity.cpp
src/client/engine/phys/: PhysicsObject.hpp  Types.cpp  Types.hpp
src/client/platform/: Timer.hpp
src/client/ren/: CMakeLists.txt  EntityRenderer.cpp  EntityRenderer.hpp  Mesh.cpp  Mesh.hpp  RenderChunk.cpp  RenderChunk.hpp  RenderManager.cpp  RenderManager.hpp  TransformationManager.cpp  TransformationManager.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/client/ren/gl/: Shader.cpp  Shader.hpp  Util.cpp  Util.hpp
src/client/ren/hud/: HUD.cpp  HUD.hpp
src/client/res/: base.frag  ui.frag
src/client/state/: CMakeLists.txt  GameState.cpp  GameState.hpp  State.hpp  TestingState.cpp
src/common/: CMakeLists.txt
src/common/engine/: Block.hpp  Chunk.cpp  Chunk.hpp  ChunkCache.cpp  ChunkCache.hpp  ChunkProvider.hpp  Stat.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/common/engine/entity/: Camera.hpp  Entity.cpp  Entity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  Rocket.cpp  Rocket.hpp
src/common/engine/phys/: PhysicsObject.cpp  PhysicsObject.hpp
src/common/engine/util/: SpatialHashtable.cpp  SpatialHashtable.hpp
src/common/platform/: CMakeLists.txt  Timer.cpp
src/engine/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkCache.cpp  ChunkCache.hpp  World.cpp  World.hpp  WorldGenerator.cpp
src/engine/entity/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  Rocket.cpp  Rocket.hpp
src/engine/phys/: PhysicsObject.cpp  PhysicsObject.hpp  Types.cpp  Types.hpp
src/engine/util/: CMakeLists.txt  Perlin.cpp  Perlin.hpp  Raymarch.cpp  Raymarch.hpp
src/ren/: .Mesh.cpp.swp  .Mesh.hpp.swp  .WorldRenderer.cpp.swp  .WorldRenderer.hpp.swp  CMakeLists.txt  Mesh.cpp  Mesh.hpp  RenderChunk.cpp  RenderChunk.hpp  RenderManager.cpp  TransformationManager.cpp  TransformationManager.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/ren/gl/: CMakeLists.txt  Shader.cpp  Shader.hpp
src/ren/hud/: HUD.cpp  HUD.hpp
src/res/: CMakeLists.txt  base.frag  base.vert
src/server/: CMakeLists.txt  main.cpp
src/state/: CMakeLists.txt  GameState.cpp  GameState.hpp  State.cpp  State.hpp  TestingState.cpp  TestingState.hpp
